--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.71'
+    ext.coroutines_version = '0.26.1'
     repositories {
         google()
         jcenter()
