--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.abplus.cardsquare">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -12,11 +14,10 @@
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
                 android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar"
                 android:configChanges="orientation|keyboardHidden|screenSize"
+                android:label="@string/app_name"
                 android:screenOrientation="portrait"
-                >
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -26,23 +27,15 @@
         <activity
                 android:name=".CardEditActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:screenOrientation="portrait"
-                />
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".UserEntryActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:screenOrientation="portrait"
-                />
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".LoginActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:screenOrientation="portrait"
-                />
-        <activity
-                android:name=".ScrollingActivity"
-                android:label="@string/title_activity_scrolling"
-                android:theme="@style/AppTheme">
-        </activity>
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
