--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,20 +32,25 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-firestore:17.1.0'
-    implementation 'com.google.firebase:firebase-storage:16.0.2'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.2'
-    implementation 'com.google.firebase:firebase-functions:16.1.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta01'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-firestore:17.1.1'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.google.firebase:firebase-functions:16.1.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'org.parceler:parceler-api:1.1.11'
     kapt 'org.parceler:parceler:1.1.11'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'jp.wasabeef:glide-transformations:3.3.0'
+
+    implementation 'com.firebaseui:firebase-ui-auth:4.2.0'
+//    implementation 'com.firebaseui:firebase-ui-auth-github:4.2.0'
+//    implementation 'com.firebaseui:firebase-ui-firestore:4.2.0'
+//    implementation 'com.firebaseui:firebase-ui-storage:4.2.0'
 }
 
 kotlin {
