--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,43 @@
         <activity
                 android:name=".MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait"
+                android:launchMode="singleTask"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-                android:name=".CardEditActivity"
+                android:name=".ui.cardedit.CardEditActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait"/>
         <activity
-                android:name=".UserEntryActivity"
+                android:name=".ui.userentry.UserEntryActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait"/>
         <activity
-                android:name=".LoginActivity"
+                android:name=".ui.login.LoginActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.carddetail.CardDetailActivity"
+                android:label="@string/title_activity_card_detail"
+                android:parentActivityName=".ui.cardlist.CardListActivity"
+                android:theme="@style/AppTheme">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.abplus.cardsquare.ui.cardlist.CardListActivity"/>
+        </activity>
+        <activity
+                android:name=".ui.cardlist.CardListActivity"
+                android:label="@string/title_activity_card_list"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.abplus.cardsquare.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
