--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.abplus.cardsquare">
+          package="com.abplus.cardsquare.app">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -41,7 +41,7 @@
                 android:theme="@style/AppTheme">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.abplus.cardsquare.ui.cardlist.CardListActivity"/>
+                    android:value="com.abplus.cardsquare.app.ui.cardlist.CardListActivity"/>
         </activity>
         <activity
                 android:name=".ui.cardlist.CardListActivity"
@@ -50,7 +50,7 @@
                 android:theme="@style/AppTheme">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.abplus.cardsquare.MainActivity"/>
+                    android:value="com.abplus.cardsquare.app.MainActivity"/>
         </activity>
     </application>
 
